Major changes using docker-compose to build complete gs1 resolver service! Bug fixes part 1!

--- a/data_gs1_org/ui/index.html
+++ b/data_gs1_org/ui/index.html
@@ -31,11 +31,11 @@
     </tr>
     <tr>
         <td>E-mail:</td>
-        <td><input type="text" id="email"></td>
+        <td><input type="text" size="40" id="email"></td>
     </tr>
     <tr>
         <td>Password:</td>
-        <td><input type="password" id="password"></td>
+        <td><input type="password" size="40" id="password"></td>
     </tr>
     <tr>
         <td>&nbsp&nbsp;</td>
