Major changes using docker-compose to build complete gs1 resolver service! WORKS!

--- a/data_gs1_org/ui/dashboard.html
+++ b/data_gs1_org/ui/dashboard.html
@@ -28,7 +28,7 @@
 <table>
     <tr>
         <td>
-            <img src="gs1resolverlogo593x311.png" height="100" alt="GS1 Resolver Logo"/>
+            <img src="GS1_Digital_Link_Resolver_Web_Banner_Large_Rectangle_336x280px_2016-02-12.png" height="100" alt="GS1 Resolver Logo"/>
             <img id="img_company_logo" height="100"/>
         </td>
     </tr>
