--- a/data_gs1_org/ui/edituri.html
+++ b/data_gs1_org/ui/edituri.html
@@ -22,7 +22,7 @@
     <script src="resolver.js"></script>
 </head>
 <body>
-<img src="gs1resolverlogo300x157.png" height="157" width="300" alt="GS1 Resolver Logo"/>
+<img src="GS1_Digital_link_Resolver_Web_Banner_Leaderboard_728x90px_2016-02-12.png" height="90" width="728" alt="GS1 Resolver Logo"/>
 <div style="background-color: aliceblue;">
     <table id="full_uri_request_table">
         <tr>
