Updated Apache2 Proxy Files

--- a/External-Proxy-Apache2-VM/var/www/html/index.html
+++ b/External-Proxy-Apache2-VM/var/www/html/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>redirecting you to https://data.gs1.org/ui/</title>
-    <meta http-equiv="refresh" content="0; url=https://data.gs1.org/ui/" />
+    <title>Redirecting you to Data Entry screen</title>
+    <meta http-equiv="refresh" content="0; url=/ui/" />
 </head>
 <body>
 </body>
