--- a/dataentry_web_server/ui/dashboard.html
+++ b/dataentry_web_server/ui/dashboard.html
@@ -30,6 +30,7 @@
         <td>
             <img src="GS1_Digital_Link_Resolver_Web_Banner_Large_Rectangle_336x280px_2016-02-12.png" height="100" alt="GS1 Resolver Logo"/>
             <img id="img_company_logo" height="100"/>
+            <img id="wait_animation" src="wait.gif" style="visibility: hidden">
         </td>
     </tr>
 
@@ -45,10 +46,12 @@
             Search / Filter:
         </td>
         <td>
-            Exact GS1 Key Value: <input type="text" id="text_search_gs1_key_value">
+            GS1 Key Code:
+            <select id="select_search_gs1_key_code" autocomplete="off">
+            </select>
         </td>
         <td>
-            Within Item Description: <input type="text" id="text_search_item_description">
+            Exact GS1 Key Value: <input type="text" id="text_search_gs1_key_value">
         </td>
         <td>
             <button id="search_button" onclick="GS1URI_DASHBOARD.Search();">Search</button>
