Corrected issue with Logout - now correctly goes to '/ui/' and not 'index.html' any longer.

--- a/dataentry_web_server/ui/dashboard.html
+++ b/dataentry_web_server/ui/dashboard.html
@@ -60,7 +60,7 @@
             <button id="clear_search_button" onclick="GS1URI_DASHBOARD.ClearSearchBoxesAndRestoreDefaultResults();">Clear</button>
         </td>
         <td style="background-color: darkblue ">
-            <button id="nlogout_button" onclick="GS1URI_COMMON.Logout();">LOGOUT<br />From Resolver</button>
+            <button id="logout_button" onclick="GS1URI_COMMON.Logout();">LOGOUT<br />From Resolver</button>
         </td>
     </tr>
 </table>
