Added maxLength limits to all text input in the UI (set by HTML and JavaScript)

--- a/dataentry_web_server/ui/edituri.html
+++ b/dataentry_web_server/ui/edituri.html
@@ -46,7 +46,7 @@
                                 </select>
                             </td>
                             <td>/</td>
-                            <td><input type="text" size="30" id="text_gs1_key_value" name="text_gs1_key_value" value=""
+                            <td><input type="text" size="30" maxlength="30" id="text_gs1_key_value" name="text_gs1_key_value" value=""
                                        onblur="GS1URI_EDITURI.CheckGS1KeyValueIntegrity()"></td>
                             <td id="td_uri_prefix_1" style="visibility: hidden">/</td>
                             <td id="td_uri_suffix_1" style="visibility: hidden"></td>
