Welcome to Version 2.1 Feature set! 1. UI Upload page can Excel spreadsheets 2. Code included a validateEntries() function which can be used optionally for you to add your own validation of uploaded entries before publishing. 3. Comprehensive API with 'batch upload' facility for fast upload of large amounts of data. 4. Lots of optimizations, enhancements and security improvements. 5. Inclusion of Python script to administrate accounts

--- a/resolver_data_entry_server/public/download.html
+++ b/resolver_data_entry_server/public/download.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 <h1>GS1 Resolver - Download Your Data</h1>
-<div>Please paste your authentication key here: <input type="text" id="authKey"></div>
+<div>Please paste your authentication key here:
+    <input type="password" id="authKey">&nbsp;&nbsp;
+    <img src="images/eye.gif" width="30px" height="20px" alt="hover over this eye symbol to see your authentication key" onmouseover="mouseOverPass();" onmouseout="mouseOutPass();" />
+</div>
 <br/>
 <div>
     <button id="buttonDownload" onclick="downloadData();">Download Data Now</button>
