--- a/resolver_data_entry_server/public/index.html
+++ b/resolver_data_entry_server/public/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 </head>
 <body>
-<img src="images/gs1logo.png">
+<img src="images/gs1logo.png" alt="GS1 Logo">
 <h1>Welcome to GS1 Resolver's Data Entry Service</h1>
 <h2><a href="upload.html">Upload data to GS1 Resolver</a></h2>
 <h2><a href="download.html">Download your data from GS1 Resolver</a></h2>
+<h2><a href="linktypes.html">Link Types accepted by this GS1 Resolver</a></h2>
 </body>
 </html>
