Refactor GS1 test suite for schema validation and error handling
Updated test suite to validate resolver descriptions against GS1 schema using Ajv, improved error handling, and added logging for edge cases. Refactored HTML, JavaScript, and configuration to follow a more consistent and modular structure, ensuring compliance with updated directory paths and naming conventions.

AI Observations:

This commit significantly improves code robustness and maintainability, especially with better error handling and modular design in validation logic. The use of Ajv for schema validation is a great addition, ensuring adherence to standards. However, some parts of the refactored code, particularly the repeated error-catching blocks, could be abstracted for improved DRY compliance.

--- a/test_suite/public/index.html
+++ b/test_suite/public/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>GS1 Digital Link Resolver Test Suite</title>
-    <script src="/test/GS1DigitalLinkToolkit.js"></script>
-    <script src="/test/GS1DigitalLinkResolverTestSuite.js"></script>
-    <link rel="stylesheet" href="/test/GS1DigitalLinkResolverTestSuiteStyles.css"/>
+    <script src="/test-suites/resolver/1.0.0/public/ajv7.min.js"></script>
+    <script src="/test-suites/resolver/1.0.0/public/GS1DigitalLinkToolkit.js"></script>
+    <script src="/test-suites/resolver/1.0.0/public/GS1DigitalLinkResolverTestSuite.js"></script>
+    <link rel="stylesheet" href="/test-suites/resolver/1.0.0/public/GS1DigitalLinkResolverTestSuiteStyles.css"/>
     <style type="text/css">
         #dlEgInput
         {
@@ -19,7 +20,7 @@
     <p>Conformance tests <a href="Conformance.txt">GS1 Digital Link version 1.1</a>.</p>
 </header>
 <main>
-    <img alt="rotating circle showing tests are running" id="rotatingcircle" src="/test/rotatingcircle.gif" height="40" style="visibility: hidden">
+    <img alt="rotating circle showing tests are running" id="rotatingcircle" src="/test-suites/resolver/1.0.0/public/rotatingcircle.gif" height="40" style="visibility: hidden">
     <!-- You need an element (any kind of element) in your page with an id that is used by the test suite. If you use a different id, you'll need to update the const in the JS library accordingly -->
     <section id="gs1ResolverTests"></section>
     <p style="clear:both">Please report any bugs in this test suite by raising an issue in its <a href="https://github.com/gs1/GS1DL-resolver-testsuite">GitHub repository</a>.</p>
